Improved styling and documentation

--- a/bower.json
+++ b/bower.json
@@ -2,20 +2,21 @@
   "name": "github-repos-cards",
   "version": "0.0.0",
   "keywords": [
-    "seed",
     "polymer",
-    "web-components"
+    "web-component",
+    "web-components",
+    "github-repos-cards",
+    "github"
   ],
   "main": "github-repos-cards.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^0.5.1",
-    "polymer-jsonp": "Polymer/polymer-jsonp#~0.3.0"
+    "core-elements": "Polymer/core-elements#~0.5.2",
+    "polymer": "Polymer/polymer#^0.5.2",
+    "polymer-jsonp": "Polymer/polymer-jsonp#~0.3.0",
+    "time-elements": "~0.4.0",
+    "paper-icon-button": "Polymer/paper-icon-button#~0.5.4"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^2.0.0"
-  },
-  "resolutions": {
-    "core-component-page": "^0.5",
-    "polymer": "^0.5"
   }
 }
