--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "polymer": "Polymer/polymer#^0.5.2",
     "polymer-jsonp": "Polymer/polymer-jsonp#~0.3.0",
     "time-elements": "~0.4.0",
-    "paper-icon-button": "Polymer/paper-icon-button#~0.5.4"
+    "paper-icon-button": "Polymer/paper-icon-button#~0.5.4",
+    "paper-shadow": "Polymer/paper-shadow#~0.5.4"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^2.0.0"
