--- a/bower.json
+++ b/bower.json
@@ -10,14 +10,18 @@
   ],
   "main": "github-repos-cards.html",
   "dependencies": {
-    "core-elements": "Polymer/core-elements#~0.5.2",
-    "polymer": "Polymer/polymer#^0.5.2",
-    "polymer-jsonp": "Polymer/polymer-jsonp#~0.3.0",
-    "time-elements": "~0.4.0",
+    "polymer": "Polymer/polymer#^0.5.4",
+    "core-elements": "Polymer/core-elements#~0.5.4",
     "paper-icon-button": "Polymer/paper-icon-button#~0.5.4",
-    "paper-shadow": "Polymer/paper-shadow#~0.5.4"
+    "paper-shadow": "Polymer/paper-shadow#~0.5.4",
+    "polymer-jsonp": "Polymer/polymer-jsonp",
+    "time-elements": "~0.4.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^2.0.0"
+  },
+  "resolutions": {
+    "polymer": "^0.5.4",
+    "core-component-page": "^0.5"
   }
 }
